--- a/src/app/components/clock-display/clock-display.component.scss
+++ b/src/app/components/clock-display/clock-display.component.scss
@@ -13,12 +13,13 @@
 
 .clock {
   color: #0c4d61;
-  position: absolute;
-  top: 20%;
-  left: 10%;
   font-size: 320px;
   font-family: fantasy;
   z-index: 2;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .fg {
@@ -31,4 +32,19 @@
   width: 100%;
   height: 100%;
   z-index: 3;
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .clock {
+    top: 56%;
+    font-size: 220px;
+
+  }
+}
+@media only screen and (max-width: 767px) {
+  .clock {
+    top: 58%;
+    font-size: 80px;
+  }
 }
